[build-system]
requires = [
    "scikit-build-core",
    "numpy"
]

build-backend = "scikit_build_core.build"

[project]

name = "bertini"
version = "1.0.5" # this version number needs to be programmatically set.

requires-python = ">= 3.8"
readme = "../README.md"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["test"]